2009-04-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* configure.ac:
	* tests/Analyzer/Analyzer.cs:
	* tests/Analyzer/Makefile.am:
	* tests/Makefile.am:
	* tests/Performance/Makefile.am:
	* tests/Performance/PerformanceTests.cs:
	* tests/compare-perf-results:
	* tests/test-perf: New scripts and tests for testing and comparing
	performance across commits.

2009-04-05  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Fix confusing typo in debug message.

2009-04-04  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Gui/RatingRenderer.cs: Fixed zero rating
	display in the main menu (BGO #577835)

2009-04-03  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Mono.Data.Sqlite/Mono.Data.Sqlite/SQLiteConvert.cs:
	* src/Libraries/Mono.Data.Sqlite/bnc-490021_mds-improve-type-lookup.patch:
	Apply patch from Bertrand Lorentz optimizing the method that does type
	lookups (BNC #490021)

2009-04-02  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Header.cs:
	Allowing to resize track list view columns as long as one column to the
	left and to the right is not fixed-width (BGO #538085)

2009-04-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Resources/banshee-dialogs.glade: Improve
	language for smart playlists predefined button.

2009-04-02  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ListView/ListView_Rendering.cs:
	Fixed row rendering glitch when hscroll position is non-zero
	(BGO #548526)

2009-04-02  Alexander Kojevnikov  <alexander@kojevnikov.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCellRating.cs:
	* src/Libraries/Hyena.Gui/Hyena.Gui/RatingRenderer.cs:
	* src/Libraries/Hyena.Gui/Hyena.Widgets/RatingEntry.cs: Changed the
	RatingEntry widget to make it easier to edit and reset the ratings
	(BGO #572260)
