@@ -1,3 +1,8 @@
+2009-04-08  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* src/Libraries/Hyena/Hyena.Data.Sqlite/HyenaSqliteConnection.cs: Remove
+	old comment about how to fix the transactions code.
+
 2009-04-06  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* configure.ac:
